kubernetes/kube/ingress/cert-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cert-ingress
  # annotations:
  #   kubernetes.io/ingress.class: traefik
spec:
  rules:
    - http:
        paths: # No host specified. Matches all incoming requests
          - path: /\.well-known/acme-challenge/* # This is regex
            backend:
              serviceName: certificate-renewal
              servicePort: 80
  # tls: <-- Not required, this is to aquire the certificate
